# maze-chase-challenge

./: .gitignore  README.md  REPORT.md  bunfig.toml  package.json  pyproject.toml  technical-challenge-frontend-engineer.md
backend/: __init__.py
backend/generator/: __init__.py  ascii2d.py  maze.py
backend/server/: __init__.py  app.py  models.py  storage.py
frontend/editor/: App.vue  ToolIcon.vue  api.ts  codec.worker.js  index.html  model.test.ts  model.ts  serve.ts  styles.css
frontend/game/: App.vue  index.html  rendering.ts  serve.ts  styles.css
frontend/game/engine/: ascii2d.ts  board.ts  coord.ts  engine.ts  ghost.ts  index.ts  pellet.ts  player.ts
