[project]
name = "pacman-ts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.3",
    "uvicorn[standard]>=0.49.0",
]

[project.scripts]
backend = "backend.server.app:main"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]
